parser.output
Terminals unused in grammar

   NEWLINE


State 22 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_head SEMICOLON block DOT

    2 program_head: PROGRAM ID

    3 block: constant_definition_part type_definition_part variable_declaration_part procedure_function_declaration_part block_body_part

    4 id_list: id_list COMMA ID
    5        | ID

    6 constant_definition_part: CONST constant_list
    7                         | %empty

    8 constant_list: constant_list constant_definition
    9              | constant_definition

   10 constant_definition: ID EQUAL constant_value SEMICOLON

   11 constant_value: INTEGER
   12               | REAL
   13               | CHAR
   14               | STRING

   15 type_definition_part: TYPE type_definition_list
   16                     | %empty

   17 type_definition_list: type_definition_list type_definition
   18                     | type_definition

   19 type_definition: ID EQUAL type_denoter SEMICOLON

   20 type_denoter: simple_type
   21             | range_type
   22             | array_type
   23             | record_type

   24 simple_type: TYPE_INTEGER
   25            | TYPE_CHAR
   26            | TYPE_REAL
   27            | TYPE_STRING
   28            | ID
   29            | LP id_list RP

   30 range_type: constant_value DOTDOT constant_value

   31 array_type: ARRAY LB range_type RB OF type_denoter

   32 record_type: RECORD field_definition_list END

   33 field_definition_list: field_definition_list SEMICOLON field_definition
   34                      | field_definition

   35 field_definition: ID COLON type_denoter

   36 variable_declaration_part: VAR variable_declaration_list SEMICOLON
   37                          | %empty

   38 variable_declaration_list: variable_declaration_list SEMICOLON variable_declaration
   39                          | variable_declaration

   40 variable_declaration: ID COLON type_denoter

   41 procedure_function_declaration_part: procedure_function_declaration_part procedure_function_declaration
   42                                    | procedure_function_declaration
   43                                    | %empty

   44 procedure_function_declaration: procedure_declaration
   45                               | function_declaration

   46 procedure_declaration: PROCEDURE ID parameters SEMICOLON block SEMICOLON

   47 function_declaration: FUNCTION ID parameters COLON simple_type SEMICOLON block SEMICOLON

   48 parameters: LP parameter_list RP
   49           | LP RP

   50 parameter_list: parameter_list SEMICOLON parameter
   51               | parameter

   52 parameter: ID COLON simple_type

   53 block_body_part: compound_statement

   54 compound_statement: BEGIN_ statememt_list END

   55 statememt_list: statememt_list statememt SEMICOLON
   56               | %empty

   57 label: STRING

   58 statememt: label COLON stmt
   59          | stmt

   60 stmt: assign_statememt
   61     | procedure_statement
   62     | if_statememt
   63     | repeat_statememt
   64     | for_statememt
   65     | while_statememt
   66     | case_statememt
   67     | goto_statememt
   68     | compound_statement

   69 assign_statememt: variable_access ASSIGN expression

   70 variable_access: ID
   71                | ID LB expression RB
   72                | ID DOT ID

   73 procedure_statement: READ LP factor RP
   74                    | WRITE LP expression RP
   75                    | ID LP args RP
   76                    | ID LP RP

   77 if_statememt: IF expression THEN statememt ELSE statememt
   78             | IF expression THEN statememt

   79 repeat_statememt: REPEAT statememt_list UNTIL expression

   80 $@1: %empty

   81 for_statememt: FOR ID $@1 ASSIGN expression direction expression DO statememt

   82 direction: TO
   83          | DOWNTO

   84 while_statememt: WHILE expression DO statememt

   85 case_statememt: CASE expression OF case_list END

   86 case_list: case_list SEMICOLON case_item
   87          | case_item

   88 case_item: constant_value COLON statememt

   89 goto_statememt: GOTO label

   90 expression: expression LT expr
   91           | expression LE expr
   92           | expression EQUAL expr
   93           | expression GE expr
   94           | expression GT expr
   95           | expression UNEQUAL expr
   96           | expr

   97 expr: expr PLUS term
   98     | expr MINUS term
   99     | expr OR term
  100     | expr XOR term
  101     | term

  102 term: term MULTIPLY factor
  103     | term DIVIDE factor
  104     | term MOD factor
  105     | term AND factor
  106     | factor

  107 factor: ID
  108       | ID LP args RP
  109       | ID LB expression RB
  110       | ID DOT ID
  111       | constant_value
  112       | LP expression RP
  113       | MINUS factor
  114       | NOT factor

  115 args: args COMMA expression
  116     | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
AND (258) 105
ARRAY (259) 31
BEGIN_ (260) 54
CASE (261) 85
CONST (262) 6
DO (263) 81 84
DOWNTO (264) 83
OR (265) 99
ELSE (266) 77
END (267) 32 54 85
FOR (268) 81
FUNCTION (269) 47
GOTO (270) 89
IF (271) 77 78
NOT (272) 114
OF (273) 31 85
PROGRAM (274) 2
PROCEDURE (275) 46
READ (276) 73
RECORD (277) 32
REPEAT (278) 79
THEN (279) 77 78
TO (280) 82
TYPE (281) 15
UNTIL (282) 79
VAR (283) 36
WHILE (284) 84
WRITE (285) 74
XOR (286) 100
TYPE_INTEGER (287) 24
TYPE_REAL (288) 26
TYPE_STRING (289) 27
TYPE_CHAR (290) 25
NEWLINE (291)
PLUS (292) 97
MINUS (293) 98 113
MULTIPLY (294) 102
DIVIDE (295) 103
MOD (296) 104
LT (297) 90
LE (298) 91
EQUAL (299) 10 19 92
UNEQUAL (300) 95
GE (301) 93
GT (302) 94
DOT (303) 1 72 110
DOTDOT (304) 30
COMMA (305) 4 115
SEMICOLON (306) 1 10 19 33 36 38 46 47 50 55 86
COLON (307) 35 40 47 52 58 88
ASSIGN (308) 69 81
LB (309) 31 71 109
RB (310) 31 71 109
LP (311) 29 48 49 73 74 75 76 108 112
RP (312) 29 48 49 73 74 75 76 108 112
INTEGER (313) 11
REAL (314) 12
CHAR (315) 13
STRING (316) 14 57
ID (317) 2 4 5 10 19 28 35 40 46 47 52 70 71 72 75 76 81 107 108 109
    110


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
program (64)
    on left: 1, on right: 0
program_head (65)
    on left: 2, on right: 1
block (66)
    on left: 3, on right: 1 46 47
id_list (67)
    on left: 4 5, on right: 4 29
constant_definition_part (68)
    on left: 6 7, on right: 3
constant_list (69)
    on left: 8 9, on right: 6 8
constant_definition (70)
    on left: 10, on right: 8 9
constant_value (71)
    on left: 11 12 13 14, on right: 10 30 88 111
type_definition_part (72)
    on left: 15 16, on right: 3
type_definition_list (73)
    on left: 17 18, on right: 15 17
type_definition (74)
    on left: 19, on right: 17 18
type_denoter (75)
    on left: 20 21 22 23, on right: 19 31 35 40
simple_type (76)
    on left: 24 25 26 27 28 29, on right: 20 47 52
range_type (77)
    on left: 30, on right: 21 31
array_type (78)
    on left: 31, on right: 22
record_type (79)
    on left: 32, on right: 23
field_definition_list (80)
    on left: 33 34, on right: 32 33
field_definition (81)
    on left: 35, on right: 33 34
variable_declaration_part (82)
    on left: 36 37, on right: 3
variable_declaration_list (83)
    on left: 38 39, on right: 36 38
variable_declaration (84)
    on left: 40, on right: 38 39
procedure_function_declaration_part (85)
    on left: 41 42 43, on right: 3 41
procedure_function_declaration (86)
    on left: 44 45, on right: 41 42
procedure_declaration (87)
    on left: 46, on right: 44
function_declaration (88)
    on left: 47, on right: 45
parameters (89)
    on left: 48 49, on right: 46 47
parameter_list (90)
    on left: 50 51, on right: 48 50
parameter (91)
    on left: 52, on right: 50 51
block_body_part (92)
    on left: 53, on right: 3
compound_statement (93)
    on left: 54, on right: 53 68
statememt_list (94)
    on left: 55 56, on right: 54 55 79
label (95)
    on left: 57, on right: 58 89
statememt (96)
    on left: 58 59, on right: 55 77 78 81 84 88
stmt (97)
    on left: 60 61 62 63 64 65 66 67 68, on right: 58 59
assign_statememt (98)
    on left: 69, on right: 60
variable_access (99)
    on left: 70 71 72, on right: 69
procedure_statement (100)
    on left: 73 74 75 76, on right: 61
if_statememt (101)
    on left: 77 78, on right: 62
repeat_statememt (102)
    on left: 79, on right: 63
for_statememt (103)
    on left: 81, on right: 64
$@1 (104)
    on left: 80, on right: 81
direction (105)
    on left: 82 83, on right: 81
while_statememt (106)
    on left: 84, on right: 65
case_statememt (107)
    on left: 85, on right: 66
case_list (108)
    on left: 86 87, on right: 85 86
case_item (109)
    on left: 88, on right: 86 87
goto_statememt (110)
    on left: 89, on right: 67
expression (111)
    on left: 90 91 92 93 94 95 96, on right: 69 71 74 77 78 79 81 84
    85 90 91 92 93 94 95 109 112 115 116
expr (112)
    on left: 97 98 99 100 101, on right: 90 91 92 93 94 95 96 97 98
    99 100
term (113)
    on left: 102 103 104 105 106, on right: 97 98 99 100 101 102 103
    104 105
factor (114)
    on left: 107 108 109 110 111 112 113 114, on right: 73 102 103
    104 105 106 113 114
args (115)
    on left: 115 116, on right: 75 108 115


State 0

    0 $accept: . program $end
    1 program: . program_head SEMICOLON block DOT
    2 program_head: . PROGRAM ID

    PROGRAM  shift, and go to state 1

    program       go to state 2
    program_head  go to state 3


State 1

    2 program_head: PROGRAM . ID

    ID  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_head . SEMICOLON block DOT

    SEMICOLON  shift, and go to state 6


State 4

    2 program_head: PROGRAM ID .

    $default  reduce using rule 2 (program_head)


State 5

    0 $accept: program $end .

    $default  accept


State 6

    1 program: program_head SEMICOLON . block DOT
    3 block: . constant_definition_part type_definition_part variable_declaration_part procedure_function_declaration_part block_body_part
    6 constant_definition_part: . CONST constant_list
    7                         | . %empty  [BEGIN_, FUNCTION, PROCEDURE, TYPE, VAR]

    CONST  shift, and go to state 7

    $default  reduce using rule 7 (constant_definition_part)

    block                     go to state 8
    constant_definition_part  go to state 9


State 7

    6 constant_definition_part: CONST . constant_list
    8 constant_list: . constant_list constant_definition
    9              | . constant_definition
   10 constant_definition: . ID EQUAL constant_value SEMICOLON

    ID  shift, and go to state 10

    constant_list        go to state 11
    constant_definition  go to state 12


State 8

    1 program: program_head SEMICOLON block . DOT

    DOT  shift, and go to state 13


State 9

    3 block: constant_definition_part . type_definition_part variable_declaration_part procedure_function_declaration_part block_body_part
   15 type_definition_part: . TYPE type_definition_list
   16                     | . %empty  [BEGIN_, FUNCTION, PROCEDURE, VAR]

    TYPE  shift, and go to state 14

    $default  reduce using rule 16 (type_definition_part)

    type_definition_part  go to state 15


State 10

   10 constant_definition: ID . EQUAL constant_value SEMICOLON

    EQUAL  shift, and go to state 16


State 11

    6 constant_definition_part: CONST constant_list .  [BEGIN_, FUNCTION, PROCEDURE, TYPE, VAR]
    8 constant_list: constant_list . constant_definition
   10 constant_definition: . ID EQUAL constant_value SEMICOLON

    ID  shift, and go to state 10

    $default  reduce using rule 6 (constant_definition_part)

    constant_definition  go to state 17


State 12

    9 constant_list: constant_definition .

    $default  reduce using rule 9 (constant_list)


State 13

    1 program: program_head SEMICOLON block DOT .

    $default  reduce using rule 1 (program)


State 14

   15 type_definition_part: TYPE . type_definition_list
   17 type_definition_list: . type_definition_list type_definition
   18                     | . type_definition
   19 type_definition: . ID EQUAL type_denoter SEMICOLON

    ID  shift, and go to state 18

    type_definition_list  go to state 19
    type_definition       go to state 20


State 15

    3 block: constant_definition_part type_definition_part . variable_declaration_part procedure_function_declaration_part block_body_part
   36 variable_declaration_part: . VAR variable_declaration_list SEMICOLON
   37                          | . %empty  [BEGIN_, FUNCTION, PROCEDURE]

    VAR  shift, and go to state 21

    $default  reduce using rule 37 (variable_declaration_part)

    variable_declaration_part  go to state 22


State 16

   10 constant_definition: ID EQUAL . constant_value SEMICOLON
   11 constant_value: . INTEGER
   12               | . REAL
   13               | . CHAR
   14               | . STRING

    INTEGER  shift, and go to state 23
    REAL     shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    constant_value  go to state 27


State 17

    8 constant_list: constant_list constant_definition .

    $default  reduce using rule 8 (constant_list)


State 18

   19 type_definition: ID . EQUAL type_denoter SEMICOLON

    EQUAL  shift, and go to state 28


State 19

   15 type_definition_part: TYPE type_definition_list .  [BEGIN_, FUNCTION, PROCEDURE, VAR]
   17 type_definition_list: type_definition_list . type_definition
   19 type_definition: . ID EQUAL type_denoter SEMICOLON

    ID  shift, and go to state 18

    $default  reduce using rule 15 (type_definition_part)

    type_definition  go to state 29


State 20

   18 type_definition_list: type_definition .

    $default  reduce using rule 18 (type_definition_list)


State 21

   36 variable_declaration_part: VAR . variable_declaration_list SEMICOLON
   38 variable_declaration_list: . variable_declaration_list SEMICOLON variable_declaration
   39                          | . variable_declaration
   40 variable_declaration: . ID COLON type_denoter

    ID  shift, and go to state 30

    variable_declaration_list  go to state 31
    variable_declaration       go to state 32


State 22

    3 block: constant_definition_part type_definition_part variable_declaration_part . procedure_function_declaration_part block_body_part
   41 procedure_function_declaration_part: . procedure_function_declaration_part procedure_function_declaration
   42                                    | . procedure_function_declaration
   43                                    | . %empty  [BEGIN_, FUNCTION, PROCEDURE]
   44 procedure_function_declaration: . procedure_declaration
   45                               | . function_declaration
   46 procedure_declaration: . PROCEDURE ID parameters SEMICOLON block SEMICOLON
   47 function_declaration: . FUNCTION ID parameters COLON simple_type SEMICOLON block SEMICOLON

    FUNCTION   shift, and go to state 33
    PROCEDURE  shift, and go to state 34

    FUNCTION   [reduce using rule 43 (procedure_function_declaration_part)]
    PROCEDURE  [reduce using rule 43 (procedure_function_declaration_part)]
    $default   reduce using rule 43 (procedure_function_declaration_part)

    procedure_function_declaration_part  go to state 35
    procedure_function_declaration       go to state 36
    procedure_declaration                go to state 37
    function_declaration                 go to state 38


State 23

   11 constant_value: INTEGER .

    $default  reduce using rule 11 (constant_value)


State 24

   12 constant_value: REAL .

    $default  reduce using rule 12 (constant_value)


State 25

   13 constant_value: CHAR .

    $default  reduce using rule 13 (constant_value)


State 26

   14 constant_value: STRING .

    $default  reduce using rule 14 (constant_value)


State 27

   10 constant_definition: ID EQUAL constant_value . SEMICOLON

    SEMICOLON  shift, and go to state 39


State 28

   11 constant_value: . INTEGER
   12               | . REAL
   13               | . CHAR
   14               | . STRING
   19 type_definition: ID EQUAL . type_denoter SEMICOLON
   20 type_denoter: . simple_type
   21             | . range_type
   22             | . array_type
   23             | . record_type
   24 simple_type: . TYPE_INTEGER
   25            | . TYPE_CHAR
   26            | . TYPE_REAL
   27            | . TYPE_STRING
   28            | . ID
   29            | . LP id_list RP
   30 range_type: . constant_value DOTDOT constant_value
   31 array_type: . ARRAY LB range_type RB OF type_denoter
   32 record_type: . RECORD field_definition_list END

    ARRAY         shift, and go to state 40
    RECORD        shift, and go to state 41
    TYPE_INTEGER  shift, and go to state 42
    TYPE_REAL     shift, and go to state 43
    TYPE_STRING   shift, and go to state 44
    TYPE_CHAR     shift, and go to state 45
    LP            shift, and go to state 46
    INTEGER       shift, and go to state 23
    REAL          shift, and go to state 24
    CHAR          shift, and go to state 25
    STRING        shift, and go to state 26
    ID            shift, and go to state 47

    constant_value  go to state 48
    type_denoter    go to state 49
    simple_type     go to state 50
    range_type      go to state 51
    array_type      go to state 52
    record_type     go to state 53


State 29

   17 type_definition_list: type_definition_list type_definition .

    $default  reduce using rule 17 (type_definition_list)


State 30

   40 variable_declaration: ID . COLON type_denoter

    COLON  shift, and go to state 54


State 31

   36 variable_declaration_part: VAR variable_declaration_list . SEMICOLON
   38 variable_declaration_list: variable_declaration_list . SEMICOLON variable_declaration

    SEMICOLON  shift, and go to state 55


State 32

   39 variable_declaration_list: variable_declaration .

    $default  reduce using rule 39 (variable_declaration_list)


State 33

   47 function_declaration: FUNCTION . ID parameters COLON simple_type SEMICOLON block SEMICOLON

    ID  shift, and go to state 56


State 34

   46 procedure_declaration: PROCEDURE . ID parameters SEMICOLON block SEMICOLON

    ID  shift, and go to state 57


State 35

    3 block: constant_definition_part type_definition_part variable_declaration_part procedure_function_declaration_part . block_body_part
   41 procedure_function_declaration_part: procedure_function_declaration_part . procedure_function_declaration
   44 procedure_function_declaration: . procedure_declaration
   45                               | . function_declaration
   46 procedure_declaration: . PROCEDURE ID parameters SEMICOLON block SEMICOLON
   47 function_declaration: . FUNCTION ID parameters COLON simple_type SEMICOLON block SEMICOLON
   53 block_body_part: . compound_statement
   54 compound_statement: . BEGIN_ statememt_list END

    BEGIN_     shift, and go to state 58
    FUNCTION   shift, and go to state 33
    PROCEDURE  shift, and go to state 34

    procedure_function_declaration  go to state 59
    procedure_declaration           go to state 37
    function_declaration            go to state 38
    block_body_part                 go to state 60
    compound_statement              go to state 61


State 36

   42 procedure_function_declaration_part: procedure_function_declaration .

    $default  reduce using rule 42 (procedure_function_declaration_part)


State 37

   44 procedure_function_declaration: procedure_declaration .

    $default  reduce using rule 44 (procedure_function_declaration)


State 38

   45 procedure_function_declaration: function_declaration .

    $default  reduce using rule 45 (procedure_function_declaration)


State 39

   10 constant_definition: ID EQUAL constant_value SEMICOLON .

    $default  reduce using rule 10 (constant_definition)


State 40

   31 array_type: ARRAY . LB range_type RB OF type_denoter

    LB  shift, and go to state 62


State 41

   32 record_type: RECORD . field_definition_list END
   33 field_definition_list: . field_definition_list SEMICOLON field_definition
   34                      | . field_definition
   35 field_definition: . ID COLON type_denoter

    ID  shift, and go to state 63

    field_definition_list  go to state 64
    field_definition       go to state 65


State 42

   24 simple_type: TYPE_INTEGER .

    $default  reduce using rule 24 (simple_type)


State 43

   26 simple_type: TYPE_REAL .

    $default  reduce using rule 26 (simple_type)


State 44

   27 simple_type: TYPE_STRING .

    $default  reduce using rule 27 (simple_type)


State 45

   25 simple_type: TYPE_CHAR .

    $default  reduce using rule 25 (simple_type)


State 46

    4 id_list: . id_list COMMA ID
    5        | . ID
   29 simple_type: LP . id_list RP

    ID  shift, and go to state 66

    id_list  go to state 67


State 47

   28 simple_type: ID .

    $default  reduce using rule 28 (simple_type)


State 48

   30 range_type: constant_value . DOTDOT constant_value

    DOTDOT  shift, and go to state 68


State 49

   19 type_definition: ID EQUAL type_denoter . SEMICOLON

    SEMICOLON  shift, and go to state 69


State 50

   20 type_denoter: simple_type .

    $default  reduce using rule 20 (type_denoter)


State 51

   21 type_denoter: range_type .

    $default  reduce using rule 21 (type_denoter)


State 52

   22 type_denoter: array_type .

    $default  reduce using rule 22 (type_denoter)


State 53

   23 type_denoter: record_type .

    $default  reduce using rule 23 (type_denoter)


State 54

   11 constant_value: . INTEGER
   12               | . REAL
   13               | . CHAR
   14               | . STRING
   20 type_denoter: . simple_type
   21             | . range_type
   22             | . array_type
   23             | . record_type
   24 simple_type: . TYPE_INTEGER
   25            | . TYPE_CHAR
   26            | . TYPE_REAL
   27            | . TYPE_STRING
   28            | . ID
   29            | . LP id_list RP
   30 range_type: . constant_value DOTDOT constant_value
   31 array_type: . ARRAY LB range_type RB OF type_denoter
   32 record_type: . RECORD field_definition_list END
   40 variable_declaration: ID COLON . type_denoter

    ARRAY         shift, and go to state 40
    RECORD        shift, and go to state 41
    TYPE_INTEGER  shift, and go to state 42
    TYPE_REAL     shift, and go to state 43
    TYPE_STRING   shift, and go to state 44
    TYPE_CHAR     shift, and go to state 45
    LP            shift, and go to state 46
    INTEGER       shift, and go to state 23
    REAL          shift, and go to state 24
    CHAR          shift, and go to state 25
    STRING        shift, and go to state 26
    ID            shift, and go to state 47

    constant_value  go to state 48
    type_denoter    go to state 70
    simple_type     go to state 50
    range_type      go to state 51
    array_type      go to state 52
    record_type     go to state 53


State 55

   36 variable_declaration_part: VAR variable_declaration_list SEMICOLON .  [BEGIN_, FUNCTION, PROCEDURE]
   38 variable_declaration_list: variable_declaration_list SEMICOLON . variable_declaration
   40 variable_declaration: . ID COLON type_denoter

    ID  shift, and go to state 30

    $default  reduce using rule 36 (variable_declaration_part)

    variable_declaration  go to state 71


State 56

   47 function_declaration: FUNCTION ID . parameters COLON simple_type SEMICOLON block SEMICOLON
   48 parameters: . LP parameter_list RP
   49           | . LP RP

    LP  shift, and go to state 72

    parameters  go to state 73


State 57

   46 procedure_declaration: PROCEDURE ID . parameters SEMICOLON block SEMICOLON
   48 parameters: . LP parameter_list RP
   49           | . LP RP

    LP  shift, and go to state 72

    parameters  go to state 74


State 58

   54 compound_statement: BEGIN_ . statememt_list END
   55 statememt_list: . statememt_list statememt SEMICOLON
   56               | . %empty

    $default  reduce using rule 56 (statememt_list)

    statememt_list  go to state 75


State 59

   41 procedure_function_declaration_part: procedure_function_declaration_part procedure_function_declaration .

    $default  reduce using rule 41 (procedure_function_declaration_part)


State 60

    3 block: constant_definition_part type_definition_part variable_declaration_part procedure_function_declaration_part block_body_part .

    $default  reduce using rule 3 (block)


State 61

   53 block_body_part: compound_statement .

    $default  reduce using rule 53 (block_body_part)


State 62

   11 constant_value: . INTEGER
   12               | . REAL
   13               | . CHAR
   14               | . STRING
   30 range_type: . constant_value DOTDOT constant_value
   31 array_type: ARRAY LB . range_type RB OF type_denoter

    INTEGER  shift, and go to state 23
    REAL     shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    constant_value  go to state 48
    range_type      go to state 76


State 63

   35 field_definition: ID . COLON type_denoter

    COLON  shift, and go to state 77


State 64

   32 record_type: RECORD field_definition_list . END
   33 field_definition_list: field_definition_list . SEMICOLON field_definition

    END        shift, and go to state 78
    SEMICOLON  shift, and go to state 79


State 65

   34 field_definition_list: field_definition .

    $default  reduce using rule 34 (field_definition_list)


State 66

    5 id_list: ID .

    $default  reduce using rule 5 (id_list)


State 67

    4 id_list: id_list . COMMA ID
   29 simple_type: LP id_list . RP

    COMMA  shift, and go to state 80
    RP     shift, and go to state 81


State 68

   11 constant_value: . INTEGER
   12               | . REAL
   13               | . CHAR
   14               | . STRING
   30 range_type: constant_value DOTDOT . constant_value

    INTEGER  shift, and go to state 23
    REAL     shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    constant_value  go to state 82


State 69

   19 type_definition: ID EQUAL type_denoter SEMICOLON .

    $default  reduce using rule 19 (type_definition)


State 70

   40 variable_declaration: ID COLON type_denoter .

    $default  reduce using rule 40 (variable_declaration)


State 71

   38 variable_declaration_list: variable_declaration_list SEMICOLON variable_declaration .

    $default  reduce using rule 38 (variable_declaration_list)


State 72

   48 parameters: LP . parameter_list RP
   49           | LP . RP
   50 parameter_list: . parameter_list SEMICOLON parameter
   51               | . parameter
   52 parameter: . ID COLON simple_type

    RP  shift, and go to state 83
    ID  shift, and go to state 84

    parameter_list  go to state 85
    parameter       go to state 86


State 73

   47 function_declaration: FUNCTION ID parameters . COLON simple_type SEMICOLON block SEMICOLON

    COLON  shift, and go to state 87


State 74

   46 procedure_declaration: PROCEDURE ID parameters . SEMICOLON block SEMICOLON

    SEMICOLON  shift, and go to state 88


State 75

   54 compound_statement: . BEGIN_ statememt_list END
   54                   | BEGIN_ statememt_list . END
   55 statememt_list: statememt_list . statememt SEMICOLON
   57 label: . STRING
   58 statememt: . label COLON stmt
   59          | . stmt
   60 stmt: . assign_statememt
   61     | . procedure_statement
   62     | . if_statememt
   63     | . repeat_statememt
   64     | . for_statememt
   65     | . while_statememt
   66     | . case_statememt
   67     | . goto_statememt
   68     | . compound_statement
   69 assign_statememt: . variable_access ASSIGN expression
   70 variable_access: . ID
   71                | . ID LB expression RB
   72                | . ID DOT ID
   73 procedure_statement: . READ LP factor RP
   74                    | . WRITE LP expression RP
   75                    | . ID LP args RP
   76                    | . ID LP RP
   77 if_statememt: . IF expression THEN statememt ELSE statememt
   78             | . IF expression THEN statememt
   79 repeat_statememt: . REPEAT statememt_list UNTIL expression
   81 for_statememt: . FOR ID $@1 ASSIGN expression direction expression DO statememt
   84 while_statememt: . WHILE expression DO statememt
   85 case_statememt: . CASE expression OF case_list END
   89 goto_statememt: . GOTO label

    BEGIN_  shift, and go to state 58
    CASE    shift, and go to state 89
    END     shift, and go to state 90
    FOR     shift, and go to state 91
    GOTO    shift, and go to state 92
    IF      shift, and go to state 93
    READ    shift, and go to state 94
    REPEAT  shift, and go to state 95
    WHILE   shift, and go to state 96
    WRITE   shift, and go to state 97
    STRING  shift, and go to state 98
    ID      shift, and go to state 99

    compound_statement   go to state 100
    label                go to state 101
    statememt            go to state 102
    stmt                 go to state 103
    assign_statememt     go to state 104
    variable_access      go to state 105
    procedure_statement  go to state 106
    if_statememt         go to state 107
    repeat_statememt     go to state 108
    for_statememt        go to state 109
    while_statememt      go to state 110
    case_statememt       go to state 111
    goto_statememt       go to state 112


State 76

   31 array_type: ARRAY LB range_type . RB OF type_denoter

    RB  shift, and go to state 113


State 77

   11 constant_value: . INTEGER
   12               | . REAL
   13               | . CHAR
   14               | . STRING
   20 type_denoter: . simple_type
   21             | . range_type
   22             | . array_type
   23             | . record_type
   24 simple_type: . TYPE_INTEGER
   25            | . TYPE_CHAR
   26            | . TYPE_REAL
   27            | . TYPE_STRING
   28            | . ID
   29            | . LP id_list RP
   30 range_type: . constant_value DOTDOT constant_value
   31 array_type: . ARRAY LB range_type RB OF type_denoter
   32 record_type: . RECORD field_definition_list END
   35 field_definition: ID COLON . type_denoter

    ARRAY         shift, and go to state 40
    RECORD        shift, and go to state 41
    TYPE_INTEGER  shift, and go to state 42
    TYPE_REAL     shift, and go to state 43
    TYPE_STRING   shift, and go to state 44
    TYPE_CHAR     shift, and go to state 45
    LP            shift, and go to state 46
    INTEGER       shift, and go to state 23
    REAL          shift, and go to state 24
    CHAR          shift, and go to state 25
    STRING        shift, and go to state 26
    ID            shift, and go to state 47

    constant_value  go to state 48
    type_denoter    go to state 114
    simple_type     go to state 50
    range_type      go to state 51
    array_type      go to state 52
    record_type     go to state 53


State 78

   32 record_type: RECORD field_definition_list END .

    $default  reduce using rule 32 (record_type)


State 79

   33 field_definition_list: field_definition_list SEMICOLON . field_definition
   35 field_definition: . ID COLON type_denoter
